# WhatYouMean

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs  utils.rs
wix/: main.wxs
