[package]
name = "whatyoumean"
version = "3.2.0"
edition = "2021"
description = "A CLI dictionary"
license = "GPL-3.0"
authors = ["Clay66"]
readme = "README.md"
repository = "https://github.com/Clay-6/WhatYouMean"
keywords = ["language", "definitions", "dictionary"]
categories = ["command-line-utilities"]

[[bin]]
name = "wym"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
