[package]
name = "whatyoumean"
version = "3.3.0"
edition = "2021"
description = "A CLI dictionary"
license = "GPL-3.0"
authors = ["Clay66"]
readme = "README.md"
repository = "https://github.com/Clay-6/WhatYouMean"
keywords = ["language", "definitions", "dictionary"]
categories = ["command-line-utilities"]

[[bin]]
name = "wym"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# Installer scripts
installers = ["shell", "powershell"]
